# gpr300-sp24-Alexander-Daley

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: chromatic.frag  edgeDetect.frag  edgeDetect.vert  inverse.frag
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/: blinnphong.frag  blinnphong.vert  blur.frag  blur.vert  fullscreen.frag  gamma.frag  greyscale.frag  hdr.frag  shadowPass.vert
assignments/assignment3/: CMakeLists.txt  main.cpp
assignments/assignment3/assets/: blinnphong.frag  blinnphong.vert  geoShader.vert
assignments/worksession0/: CMakeLists.txt  main.cpp
assignments/worksession1/: CMakeLists.txt  main.cpp
assignments/worksession1.5/: CMakeLists.txt  main.cpp
assignments/worksession1.5/assets/: water.frag
assignments/worksession1/assets/: toonshading.frag  toonshading.vert  water.frag  water.vert
assignments/worksession2/: CMakeLists.txt  main.cpp
assignments/worksession2/assets/: bdrf.frag  bdrf.vert  blinnphong.frag  blinnphong.vert  geoShader.frag  lights.frag
core/: CMakeLists.txt
core/daley/: framebuffer.h
core/ew/: model.h  shader.h
